--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main>
             <section>
                 <!-- <h2>Introduction</h2> -->
-                <p>When did you realize that I was the one who gave it to you?<br>Did you find something related to us in the novel? Don’t we have our own 'Bonded Words' too?" Don’t you need that? ☺️ When can we write together on its final page? <br>
+                <p>Did you find something related to us in the novel? Don’t we have our own 'Bonded Words' too?" Don’t you need that? ☺️ When can we write together on its final page? <br>
             </section>
             <!-- <section>
                 <h2>About ChatGPT</h2>
