--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Hey, did you finish Chapter 3?</h1>
+<header>
+            <img src="Propic.jpg" alt="Girl in a jacket" width="130" height="130">
+            <h1 class="fam">Hey, Fami...</h1>
+            <br>
+            <h1>Did you finish Chapter 3?</h1>
             <h3>When did you realize that I was the one who gave it to you?</h3>
         </header>
         <main>
