--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
 <header>
             <img src="Propic.jpg" alt="Girl in a jacket" width="130" height="130">
-            <h1 class="fam">Hey, Fami...</h1>
+            <h1 class="fam">Hey, faamieee</h1>
             <br>
             <h1>Did you finish Chapter 3?</h1>
             <h3>When did you realize that I was the one who gave it to you?</h3>
