--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </p>
                 </section>
             </section>
-            <p>&copy; Atlantic International Courier</p>
+<!--             <p>&copy; Atlantic International Courier</p> -->
         </footer>
     </div>
 </body>
