--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         </main>
         <footer>
             <section>
-                <p><section>
+                <section>
                     <!-- <p>Like What You See? <br> -->
+                    <p>
                         Planning to surprise anyone? <a href='https://wa.me/966571501128' >Contact us!</a>
                         </p>
                 </section>
