--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section>
                 <section>
                     <!-- <p>Like What You See? <br> -->
-                    <p>
+                    <p class="surp">
                         Planning to surprise anyone? <a href='https://wa.me/966571501128' >Contact us!</a>
                         </p>
                 </section>
